styles.css
@charset "utf-8";
/* CSS Document */
html,body{
	margin:0;
	padding:0;
	background-color:rgba(255,255,255,1);
	height:100%;
	width:100%;
	}
.wrapper{
	font-size:0; /*white div issue fix to be added in parent // also added inline block peoperty to all child divs // notice text dissapears unless a text-size value is set*/
	font-family: 'Advent Pro', sans-serif;
	top:0;
	display:inline-block;
	}
.header{
	width:100%;
	height:100px;
	top:0;
	background-color:white;
	display:block;
	font-size:10px;
	background-image:url(headermesh.jpg);
	background-repeat:no-repeat;
	background-size:100%;
	border-bottom:solid 0px white;
	}
.logo{
	width:3%;
	height:auto;
	float: left;
	padding-left:7%;
	padding-top: 1%;
	}
.navbut{
	display:inline;
	}
.navbut a{			/*header page links*/
	margin:0;
	padding:0;	
	display:inline-block;
	text-decoration:none;
	color:white;
	width:10%;
	}
.navbut a:hover{
	color:red;	
	}
ul {				/*navlist positioning, style*/	
	padding:2.5% 0% 2.5% 45%;
	text-align:center;
	vertical-align:middle;	
	font-family:'Proxima Nova', sans-serif;
	font-size:12px;
	text-transform:uppercase;
	margin:0;
	letter-spacing:3px;
	}
.wrap1{
	width:100%;
	height:900px;
	text-align:center;
	background-image:url(ph.jpg);
	background-size:100%;
	background-repeat:no-repeat;
	line-height:0;
	display:inline-block;
	
	}
.wrap2{
	width:100%;
	height:600px;
	text-align:center;
	background-color:grey;
	margin:0;
	vertical-align:top;
	display:inline-block;
	}
.footer{
	width:100%;
	height:200px;
	text-align:center;
	display:inline-block;
	}
.s{
	position:relative;
	top:50%;	
	font-size:18px;
	}
.s2{
	position:relative;
	top:30%;
	font-size:18px;	
	}
.s3{
	position:relative;
	top:40%;
	padding:0 20% 0 20%;
	font-size:10px;
	}
.s4{
	position:realtive;
	top:10%;
	font-size:10px
	}

